<resources>
    <string name="app_name">水质监测</string>
    <!--string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string-->

    <string name="developer_website">www.tabll.cn</string>

    <string name="nav_header_title">上善科技污水监控系统</string>
    <string name="nav_header_subtitle">tabll@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>

    <string name="company_name">上善科技</string>
    <string name="company_speak">-您的智能污水处理专家-</string>

    <string name="main_page">首页</string>
    <string name="water_quality">水质</string>
    <string name="shop">商城</string>
    <string name="mine">我的</string>

    <string name="water_quality_over_all">水质概览</string>

    <!--主页面使用-->
    <string name="production_name_is">设备名：%1$s</string>
    <string name="production_type_is">型号：%1$s</string>
    <string name="production_state_is">状态：%1$s</string>
    <string name="production_wastage_is">剩余使用寿命：%1$s</string>
    <string name="production_manufacturer_is">制造商：%1$s</string>
    <string name="production_id_is">ID：%1$s</string>

    <!--水质页面使用-->
    <string name="production_info">数据来源：釜式污水处理装置\n功能化磁性纳米材料\n重金属类污染物检出量低于国家标准</string>

    <!--我的页使用-->
    <string name="how_to_use_products">产品使用说明</string>
    <string name="connect_my_products">设备绑定</string>
    <string name="order_history">历史订单</string>
    <string name="custom_made_business">定制化业务</string>
    <string name="contact_service">联系客服</string>

    <string name="sign_out">退出登陆</string>

    <!--注册页使用-->
    <string name="sign_in">登陆</string>
    <string name="sign_up">注册</string>
    <string name="sign_in_english">SIGN IN</string>
    <string name="sign_up_english">SIGN UP</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="password">密码</string>
    <string name="confirm">确认</string>
    <string name="forget_password">忘记密码？</string>
    <string name="copyright">Copyright © 2018 SSKJ</string>

    <string name="xb">客服</string>

</resources>
