<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">
    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <android.support.v7.widget.CardView
            android:id="@+id/production_category_item_cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="0dp"
            android:layout_marginEnd="25dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="25dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/production_name_textView"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/production_name_is"/>
                        <TextView
                            android:id="@+id/production_type_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/production_type_is" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/production_state_textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:text="@string/production_state_is" />
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:id="@+id/production_info_imageView"
                    android:contentDescription="@string/copyright"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_production_category_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/production_category_image_cardView"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_anchor="@+id/production_category_item_cardView"
            app:cardCornerRadius="25dp"
            app:layout_anchorGravity="left|center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="13dp"
                android:tint="@color/colorBackground"
                android:contentDescription="@string/copyright"
                android:src="@drawable/ic_production_category_one"/>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>
